--- a/Hotel/src/hotel/apresentacao/frmConsumivel.form
+++ b/Hotel/src/hotel/apresentacao/frmConsumivel.form
@@ -250,6 +250,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="SansSerif" size="14" style="0"/>
                 </Property>
+                <Property name="limit" type="int" value="10"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblTipo">
