--- a/Hotel/src/hotel/view/frmLogin.form
+++ b/Hotel/src/hotel/view/frmLogin.form
@@ -193,6 +193,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfdLoginKeyPressed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="lblSenha">
               <Properties>
@@ -235,6 +238,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfdLoginKeyPressed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="lblLogarse">
               <Properties>
